  should never happen unless it was edited manually)
- Due to changes in Debian, an old workaround (for broken QtWebEngine patching
  on Debian) caused the inferior qutebrowser error page to be displayed, when
  Chromium's would have worked fine. The workaround was now dropped.
- Crash when using `<Ctrl-D>` (`:completion-item-del`) in the `:tab-focus`
  list, rather than `:tab-select`.

[[v2.4.1]]
v2.4.1 (unreleased)
-------------------

Fixed
~~~~~

- Speculative fix for an immediate crash at start with the macOS/Windows
  binaries (in certain rare environments).
- Speculative fix for a qutebrowser crash when the notification daemon crashes
  while showing the notification.
- Fix crash when using `:screenshot` with an invalid `--rect` argument.
- Added a site-specific quirk to make cookie dialogs on StackExchange pages
  (such as Stack Overflow) work on Qt 5.12.

[[v2.4.0]]
v2.4.0 (2021-10-21)
-------------------

Security
~~~~~~~~

- **CVE-2021-41146**: Fix arbitrary command execution on Windows via URL handler
  argument injection. See the
  https://github.com/qutebrowser/qutebrowser/security/advisories/GHSA-vw27-fwjf-5qxm[security advisory]
  for details.

Added
~~~~~

- New `content.blocking.hosts.block_subdomains` setting which can be used to
  disable the subdomain blocking for the hosts-based adblocker introduced in
  v2.3.0.
- New `downloads.prevent_mixed_content` setting to prevent insecure
  mixed-content downloads (true by default).
- New `--private` flag for `:tab-clone`, which clones a tab into a new private
  window, mirroring the same flags for `:open` and `:tab-give`.

Fixed
~~~~~

- Switching tabs via mouse wheel scrolling now works properly on macOS. Set
  `tabs.mousewheel_switching` to false if you prefer the previous behavior.
- Speculative fix for a crash when closing qutebrowser while a systray
  notification is shown.

Changed
~~~~~~~

- Typing in the filename prompt now filters matching directories.